--- a/src/main/java/guiView/GUI.fxml
+++ b/src/main/java/guiView/GUI.fxml
@@ -8,22 +8,21 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="419.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="419.0" fitWidth="289.0">
          <image>
-            <Image url="@src/main/java/ImagesModified/GB2.png" />
+            <Image url="@../ImagesModified/GB2.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="217.0" fitWidth="239.0" layoutX="322.0" layoutY="202.0">
          <image>
-            <Image url="@src/main/java/ImagesModified/punchh.jpg" />
+            <Image url="@../ImagesModified/punchh.jpg" />
          </image>
       </ImageView>
       <ImageView fitHeight="217.0" fitWidth="33.0" layoutX="289.0" layoutY="202.0">
          <image>
-            <Image url="@src/main/java/ImagesModified/plancina3.png" />
+            <Image url="@../ImagesModified/plancina3.png" />
          </image>
       </ImageView>
       <Button layoutX="296.0" layoutY="44.0" mnemonicParsing="false" text="Button" textOverrun="CLIP">
