--- a/src/main/java/gui/GuiNew.fxml
+++ b/src/main/java/gui/GuiNew.fxml
@@ -76,7 +76,7 @@
       <RadioButton layoutX="576.0" layoutY="302.0" mnemonicParsing="false" />
       <RadioButton layoutX="576.0" layoutY="257.0" mnemonicParsing="false" />
       <RadioButton layoutX="576.0" layoutY="217.0" mnemonicParsing="false" />
-      <Button layoutX="561.0" layoutY="12.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="51.0" text="Quit" />
+      <Button fx:id="quit" layoutX="561.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#quit" prefHeight="10.0" prefWidth="51.0" text="Quit" />
       <Label layoutX="302.0" layoutY="95.0" prefHeight="20.0" prefWidth="68.0" text="Venture" />
       <Label fx:id="blackDice" layoutX="150.0" layoutY="373.0" prefHeight="17.0" prefWidth="14.0" />
       <Label fx:id="whiteDice" layoutX="172.0" layoutY="373.0" prefHeight="17.0" prefWidth="14.0" />
