--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,23 +12,17 @@
             <Image url="@../Images/personalbonustile.png" />
          </image>
       </ImageView>
-      <Label layoutX="441.0" layoutY="298.0" prefHeight="69.0" prefWidth="44.0" />
-      <Label layoutX="496.0" layoutY="275.0" prefHeight="69.0" prefWidth="44.0" />
-      <Label layoutX="512.0" layoutY="294.0" prefHeight="69.0" prefWidth="44.0" />
-      <Label layoutX="451.0" layoutY="275.0" prefHeight="69.0" prefWidth="44.0" />
-      <Label layoutX="645.0" layoutY="164.0" prefHeight="69.0" prefWidth="44.0" />
-      <Button fx:id="quit" layoutX="718.0" layoutY="12.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="51.0" text="Quit" />
-      <Label layoutX="578.0" layoutY="104.0" prefHeight="20.0" prefWidth="68.0" text="Venture" />
+      <Button fx:id="quit" layoutX="1022.0" layoutY="14.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="51.0" text="Quit" />
       <Button layoutX="714.0" layoutY="45.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="637.0" layoutY="45.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="570.0" layoutY="45.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="714.0" layoutY="91.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="793.0" layoutY="91.0" mnemonicParsing="false" text="Button" />
       <Button layoutX="793.0" layoutY="45.0" mnemonicParsing="false" text="Button" />
       <ImageView fitHeight="736.0" fitWidth="565.0">
          <image>
             <Image url="@../Images/gameboard.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="buildingTower1" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="characterTower2" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="303.0" fitWidth="468.0" layoutX="618.0" layoutY="432.0">
          <image>
             <Image url="@../../../../../../PLANCIA.jpg" />
@@ -45,5 +38,44 @@
             <Image url="@../../../../../../PLANCIA%20VIOLA.jpg" />
          </image>
       </ImageView>
+      <ImageView fx:id="territoryTower3" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower1" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="characterTower4" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="characterTower3" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="characterTower1" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="buildingTower4" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="buildingTower3" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="buildingTower2" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="buildingTower1" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="317.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ventureTower4" fitHeight="76.0" fitWidth="51.0" layoutX="360.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ventureTower3" fitHeight="76.0" fitWidth="51.0" layoutX="360.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower4" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ventureTower2" fitHeight="76.0" fitWidth="51.0" layoutX="361.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ventureTower1" fitHeight="76.0" fitWidth="51.0" layoutX="360.0" layoutY="317.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower21" fitHeight="76.0" fitWidth="51.0" layoutX="632.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower211" fitHeight="76.0" fitWidth="51.0" layoutX="714.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower212" fitHeight="76.0" fitWidth="51.0" layoutX="785.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower213" fitHeight="76.0" fitWidth="51.0" layoutX="865.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower214" fitHeight="76.0" fitWidth="51.0" layoutX="940.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower215" fitHeight="76.0" fitWidth="51.0" layoutX="1015.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower216" fitHeight="76.0" fitWidth="51.0" layoutX="632.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower217" fitHeight="76.0" fitWidth="51.0" layoutX="707.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower218" fitHeight="76.0" fitWidth="51.0" layoutX="785.0" layoutY="339.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower219" fitHeight="76.0" fitWidth="51.0" layoutX="865.0" layoutY="348.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2110" fitHeight="76.0" fitWidth="51.0" layoutX="797.0" layoutY="355.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2111" fitHeight="76.0" fitWidth="51.0" layoutX="1015.0" layoutY="348.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2112" fitHeight="76.0" fitWidth="51.0" layoutX="624.0" layoutY="447.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2113" fitHeight="76.0" fitWidth="51.0" layoutX="707.0" layoutY="447.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2114" fitHeight="76.0" fitWidth="51.0" layoutX="785.0" layoutY="447.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2115" fitHeight="76.0" fitWidth="51.0" layoutX="865.0" layoutY="447.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2116" fitHeight="76.0" fitWidth="51.0" layoutX="940.0" layoutY="447.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2117" fitHeight="76.0" fitWidth="51.0" layoutX="1015.0" layoutY="458.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2118" fitHeight="76.0" fitWidth="51.0" layoutX="632.0" layoutY="565.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2119" fitHeight="76.0" fitWidth="51.0" layoutX="707.0" layoutY="573.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2120" fitHeight="76.0" fitWidth="51.0" layoutX="785.0" layoutY="573.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2121" fitHeight="76.0" fitWidth="51.0" layoutX="865.0" layoutY="573.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2122" fitHeight="76.0" fitWidth="51.0" layoutX="940.0" layoutY="573.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2123" fitHeight="76.0" fitWidth="51.0" layoutX="1015.0" layoutY="584.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
