--- a/src/main/java/gui/Welcome.fxml
+++ b/src/main/java/gui/Welcome.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,25 +15,35 @@
             <Image url="@../Images/background.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="39.0" layoutY="41.0" prefHeight="77.0" prefWidth="547.0" text="Welcome to Lorenzo Il Magnifico" textAlignment="CENTER" textFill="#401d0d">
+      <Label layoutX="27.0" prefHeight="77.0" prefWidth="547.0" text="Welcome to Lorenzo Il Magnifico" textAlignment="CENTER" textFill="#401d0d">
          <font>
             <Font name="Blackadder ITC" size="46.0" />
          </font>
       </Label>
-      <Label layoutX="163.0" layoutY="129.0" text="How do you want to play?" textFill="#391b08">
+      <Label layoutX="150.0" layoutY="77.0" text="How do you want to play?" textFill="#391b08">
          <font>
             <Font name="Blackadder ITC" size="35.0" />
          </font>
       </Label>
-      <Button layoutX="173.0" layoutY="212.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="116.0" text="Socket" textAlignment="CENTER">
+      <Button layoutX="150.0" layoutY="142.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="116.0" text="Socket" textAlignment="CENTER">
          <font>
             <Font name="Blackadder ITC" size="30.0" />
          </font>
       </Button>
-      <Button fx:id="rmi" layoutX="314.0" layoutY="212.0" mnemonicParsing="false" onMouseClicked="#rmi" prefHeight="70.0" prefWidth="116.0" text="Rmi" textAlignment="CENTER">
+      <Button fx:id="rmi" layoutX="319.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#rmi" prefHeight="70.0" prefWidth="116.0" text="Rmi" textAlignment="CENTER">
          <font>
             <Font name="Blackadder ITC" size="30.0" />
          </font>
       </Button>
+      <Label layoutX="150.0" layoutY="222.0" text="Please tell me your name:" textFill="#391b08">
+         <font>
+            <Font name="Blackadder ITC" size="35.0" />
+         </font>
+      </Label>
+      <TextField fx:id="name" layoutX="150.0" layoutY="286.0" onAction="#registerClient" prefHeight="70.0" prefWidth="284.0" promptText="name">
+         <font>
+            <Font name="Blackadder ITC" size="34.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
