--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -22,7 +22,7 @@
             <Image url="@../Images/gameboard.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="characterTower2" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="characterTower2" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="237.0" onMouseClicked="#putRelativeOnCharacter2" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="303.0" fitWidth="468.0" layoutX="618.0" layoutY="432.0">
          <image>
             <Image url="@../Images/PLANCIA.jpg" />
@@ -38,21 +38,21 @@
             <Image url="@../Images/PLANCIA%20VIOLA.jpg" />
          </image>
       </ImageView>
-      <ImageView fx:id="territoryTower3" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="territoryTower2" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="territoryTower1" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="characterTower4" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="characterTower3" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="characterTower1" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="325.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="buildingTower4" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="59.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="buildingTower3" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="buildingTower2" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="buildingTower1" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="317.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="ventureTower4" fitHeight="76.0" fitWidth="51.0" layoutX="360.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="ventureTower3" fitHeight="76.0" fitWidth="51.0" layoutX="360.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="territoryTower4" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="ventureTower2" fitHeight="76.0" fitWidth="51.0" layoutX="361.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="ventureTower1" fitHeight="76.0" fitWidth="51.0" layoutX="360.0" layoutY="317.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower3" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="150.0" onMouseClicked="#putRelativeOnTerritory3" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower2" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="226.0" onMouseClicked="#putRelativeOnTerritory2" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower1" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="325.0" onMouseClicked="#putRelativeOnTerritory1" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="characterTower4" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="66.0" onMouseClicked="#putRelativeOnCharacter4" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="characterTower3" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="150.0" onMouseClicked="#putRelativeOnCharacter3" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="characterTower1" fitHeight="76.0" fitWidth="51.0" layoutX="160.0" layoutY="325.0" onMouseClicked="#putRelativeOnCharacter1" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="buildingTower4" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="59.0" onMouseClicked="#putRelativeOnBuilding4" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="buildingTower3" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="150.0" onMouseClicked="#putRelativeOnBuilding3" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="buildingTower2" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="237.0" onMouseClicked="#putRelativeOnBuilding2" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="buildingTower1" fitHeight="76.0" fitWidth="51.0" layoutX="257.0" layoutY="317.0" onMouseClicked="#putRelativeOnBuilding1" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ventureTower4" fitHeight="76.0" fitWidth="51.0" layoutX="360.0" layoutY="66.0" onMouseClicked="#putRelativeOnVenture4" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ventureTower3" fitHeight="76.0" fitWidth="51.0" layoutX="360.0" layoutY="150.0" onMouseClicked="#putRelativeOnVenture3" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="territoryTower4" fitHeight="76.0" fitWidth="51.0" layoutX="64.0" layoutY="66.0" onMouseClicked="#putRelativeOnTerritory4" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ventureTower2" fitHeight="76.0" fitWidth="51.0" layoutX="361.0" layoutY="237.0" onMouseClicked="#putRelativeOnVenture2" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ventureTower1" fitHeight="76.0" fitWidth="51.0" layoutX="360.0" layoutY="317.0" onMouseClicked="#putRelativeOnVenture1" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="venture1" fitHeight="76.0" fitWidth="51.0" layoutX="632.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="venture2" fitHeight="76.0" fitWidth="51.0" layoutX="714.0" layoutY="226.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="venture3" fitHeight="76.0" fitWidth="51.0" layoutX="785.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true" />
