--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,11 +13,11 @@
             <Image url="@../Images/personalbonustile.png" />
          </image>
       </ImageView>
-      <Button fx:id="quit" layoutX="1022.0" layoutY="14.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="51.0" text="Quit" />
-      <Button fx:id="black" layoutX="714.0" layoutY="45.0" mnemonicParsing="false" onMouseClicked="#chooseBlackRelative" text="Black" />
-      <Button fx:id="white" layoutX="714.0" layoutY="91.0" mnemonicParsing="false" onMouseClicked="#chooseWhiteRelative" text="White" />
-      <Button fx:id="neutral" layoutX="793.0" layoutY="91.0" mnemonicParsing="false" onMouseClicked="#chooseNeutralRelative" text="Neutral" />
-      <Button fx:id="orange" layoutX="793.0" layoutY="45.0" mnemonicParsing="false" onMouseClicked="#chooseOrangeRelative" text="Orange" />
+      <Button fx:id="quit" layoutX="1061.0" layoutY="14.0" mnemonicParsing="false" prefHeight="10.0" prefWidth="51.0" text="Quit" />
+      <Button fx:id="black" layoutX="618.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#chooseBlackRelative" text="Black" />
+      <Button fx:id="white" layoutX="690.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#chooseWhiteRelative" text="White" />
+      <Button fx:id="neutral" layoutX="848.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#chooseNeutralRelative" text="Neutral" />
+      <Button fx:id="orange" layoutX="765.0" layoutY="138.0" mnemonicParsing="false" onMouseClicked="#chooseOrangeRelative" text="Orange" />
       <ImageView fitHeight="736.0" fitWidth="565.0">
          <image>
             <Image url="@../Images/gameboard.png" />
@@ -88,5 +89,8 @@
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="346.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="387.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="councilPalace" fitHeight="46.0" fitWidth="128.0" layoutX="269.0" layoutY="408.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <TextArea fx:id="nameFxml" layoutX="607.0" layoutY="14.0" prefHeight="25.0" prefWidth="183.0" />
+      <TextArea fx:id="currentTurnOrderFxml" layoutX="891.0" layoutY="66.0" prefHeight="25.0" prefWidth="183.0" />
+      <TextArea fx:id="colorFxml" layoutX="607.0" layoutY="66.0" prefHeight="25.0" prefWidth="183.0" />
    </children>
 </AnchorPane>
