--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -88,9 +88,33 @@
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="294.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="346.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="387.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="councilPalace" fitHeight="46.0" fitWidth="128.0" layoutX="269.0" layoutY="408.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
       <TextArea fx:id="nameFxml" layoutX="607.0" layoutY="14.0" prefHeight="25.0" prefWidth="183.0" />
       <TextArea fx:id="currentTurnOrderFxml" layoutX="891.0" layoutY="66.0" prefHeight="25.0" prefWidth="183.0" />
       <TextArea fx:id="colorFxml" layoutX="607.0" layoutY="66.0" prefHeight="25.0" prefWidth="183.0" />
+      <ImageView fx:id="councilPalace1" fitHeight="27.0" fitWidth="16.0" layoutX="286.0" layoutY="411.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace2" fitHeight="27.0" fitWidth="16.0" layoutX="300.0" layoutY="411.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace3" fitHeight="27.0" fitWidth="16.0" layoutX="314.0" layoutY="411.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace4" fitHeight="27.0" fitWidth="16.0" layoutX="338.0" layoutY="411.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace5" fitHeight="27.0" fitWidth="16.0" layoutX="353.0" layoutY="411.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace6" fitHeight="27.0" fitWidth="16.0" layoutX="367.0" layoutY="411.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace7" fitHeight="27.0" fitWidth="16.0" layoutX="294.0" layoutY="434.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace8" fitHeight="27.0" fitWidth="16.0" layoutX="306.0" layoutY="434.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace9" fitHeight="27.0" fitWidth="16.0" layoutX="322.0" layoutY="434.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace10" fitHeight="27.0" fitWidth="16.0" layoutX="338.0" layoutY="434.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace11" fitHeight="27.0" fitWidth="16.0" layoutX="352.0" layoutY="434.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="councilPalace12" fitHeight="27.0" fitWidth="16.0" layoutX="367.0" layoutY="432.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="260.0" layoutY="404.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnCouncilPalace" opacity="0.0" prefHeight="55.0" prefWidth="153.0" />
+      <ImageView fx:id="productionRight1" fitHeight="27.0" fitWidth="16.0" layoutX="144.0" layoutY="590.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="productionRight2" fitHeight="27.0" fitWidth="16.0" layoutX="160.0" layoutY="588.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="productionRight3" fitHeight="27.0" fitWidth="16.0" layoutX="176.0" layoutY="588.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="productionRight4" fitHeight="27.0" fitWidth="16.0" layoutX="194.0" layoutY="590.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="productionRight5" fitHeight="27.0" fitWidth="16.0" layoutX="211.0" layoutY="588.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="harvestRight1" fitHeight="27.0" fitWidth="16.0" layoutX="136.0" layoutY="647.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="harvestRight2" fitHeight="27.0" fitWidth="16.0" layoutX="152.0" layoutY="647.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="harvestRight3" fitHeight="27.0" fitWidth="16.0" layoutX="168.0" layoutY="647.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="harvestRight4" fitHeight="27.0" fitWidth="16.0" layoutX="186.0" layoutY="647.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="harvestRight5" fitHeight="27.0" fitWidth="16.0" layoutX="203.0" layoutY="647.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="110.0" layoutY="580.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnProductionRight" opacity="0.0" prefHeight="43.0" prefWidth="117.0" />
+      <Button layoutX="110.0" layoutY="639.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnHarvestRight" opacity="0.0" prefHeight="43.0" prefWidth="117.0" />
    </children>
 </AnchorPane>
