--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -2,9 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="1120.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.BoardController">
    <children>
@@ -116,5 +118,14 @@
       <ImageView fx:id="harvestRight5" fitHeight="27.0" fitWidth="16.0" layoutX="203.0" layoutY="647.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="110.0" layoutY="580.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnProductionRight" opacity="0.0" prefHeight="43.0" prefWidth="117.0" />
       <Button layoutX="110.0" layoutY="639.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnHarvestRight" opacity="0.0" prefHeight="43.0" prefWidth="117.0" />
+      <TextField fx:id="coin" layoutX="636.0" layoutY="700.0" opacity="0.56" prefHeight="15.0" prefWidth="28.0" />
+      <TextField fx:id="wood" layoutX="719.0" layoutY="700.0" opacity="0.56" prefHeight="15.0" prefWidth="28.0" />
+      <TextField fx:id="stone" layoutX="797.0" layoutY="700.0" opacity="0.56" prefHeight="15.0" prefWidth="28.0" />
+      <TextField fx:id="servant" layoutX="866.0" layoutY="700.0" opacity="0.56" prefHeight="15.0" prefWidth="28.0" />
+      <TextField fx:id="blackDice" layoutX="294.0" layoutY="647.0" opacity="0.56" prefHeight="0.0" prefWidth="28.0" />
+      <TextField fx:id="whiteDice" layoutX="340.0" layoutY="647.0" opacity="0.59" prefHeight="15.0" prefWidth="28.0" />
+      <TextField fx:id="orangeDice" layoutX="387.0" layoutY="647.0" opacity="0.4" prefHeight="15.0" prefWidth="28.0" />
+      <TextField fx:id="valueWithServant" layoutX="1008.0" layoutY="138.0" prefHeight="27.0" prefWidth="40.0" />
+      <Text layoutX="927.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="With value:" />
    </children>
 </AnchorPane>
