--- a/src/main/java/gui/GuiFinal.fxml
+++ b/src/main/java/gui/GuiFinal.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="735.0" prefWidth="1120.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.BoardController">
    <children>
@@ -88,9 +89,6 @@
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="294.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="346.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fitHeight="31.0" fitWidth="28.0" layoutX="387.0" layoutY="645.0" pickOnBounds="true" preserveRatio="true" />
-      <TextArea fx:id="nameFxml" layoutX="607.0" layoutY="14.0" prefHeight="25.0" prefWidth="183.0" />
-      <TextArea fx:id="currentTurnOrderFxml" layoutX="891.0" layoutY="66.0" prefHeight="25.0" prefWidth="183.0" />
-      <TextArea fx:id="colorFxml" layoutX="607.0" layoutY="66.0" prefHeight="25.0" prefWidth="183.0" />
       <ImageView fx:id="councilPalace1" fitHeight="27.0" fitWidth="16.0" layoutX="286.0" layoutY="411.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="councilPalace2" fitHeight="27.0" fitWidth="16.0" layoutX="300.0" layoutY="411.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="councilPalace3" fitHeight="27.0" fitWidth="16.0" layoutX="314.0" layoutY="411.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
@@ -103,7 +101,7 @@
       <ImageView fx:id="councilPalace10" fitHeight="27.0" fitWidth="16.0" layoutX="338.0" layoutY="434.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="councilPalace11" fitHeight="27.0" fitWidth="16.0" layoutX="352.0" layoutY="434.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="councilPalace12" fitHeight="27.0" fitWidth="16.0" layoutX="367.0" layoutY="432.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="260.0" layoutY="404.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnCouncilPalace" opacity="0.0" prefHeight="55.0" prefWidth="153.0" />
+      <Button fx:id="councilPalaceButton" layoutX="260.0" layoutY="404.0" mnemonicParsing="false" onMouseClicked="#openPrivilegeCouncil" opacity="0.0" prefHeight="55.0" prefWidth="153.0" />
       <ImageView fx:id="productionRight1" fitHeight="27.0" fitWidth="16.0" layoutX="144.0" layoutY="590.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="productionRight2" fitHeight="27.0" fitWidth="16.0" layoutX="160.0" layoutY="588.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="productionRight3" fitHeight="27.0" fitWidth="16.0" layoutX="176.0" layoutY="588.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
@@ -116,5 +114,25 @@
       <ImageView fx:id="harvestRight5" fitHeight="27.0" fitWidth="16.0" layoutX="203.0" layoutY="647.0" onMouseClicked="#putRelativeOnCouncilPalace" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="110.0" layoutY="580.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnProductionRight" opacity="0.0" prefHeight="43.0" prefWidth="117.0" />
       <Button layoutX="110.0" layoutY="639.0" mnemonicParsing="false" onMouseClicked="#putRelativeOnHarvestRight" opacity="0.0" prefHeight="43.0" prefWidth="117.0" />
+      <Label fx:id="nameFxml" layoutX="616.0" layoutY="16.0" prefHeight="46.0" prefWidth="183.0">
+         <font>
+            <Font name="Blackadder ITC" size="27.0" />
+         </font>
+      </Label>
+      <Label fx:id="colorFxml" layoutX="836.0" layoutY="16.0" prefHeight="46.0" prefWidth="183.0">
+         <font>
+            <Font name="Blackadder ITC" size="27.0" />
+         </font>
+      </Label>
+      <Label fx:id="currentPlayerFxml" layoutX="616.0" layoutY="74.0" prefHeight="46.0" prefWidth="183.0">
+         <font>
+            <Font name="Blackadder ITC" size="27.0" />
+         </font>
+      </Label>
+      <Label fx:id="currentTurnOrderFxml" layoutX="849.0" layoutY="66.0" prefHeight="46.0" prefWidth="183.0">
+         <font>
+            <Font name="Blackadder ITC" size="27.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
