--- a/src/main/java/gui/GuiLogin.fxml
+++ b/src/main/java/gui/GuiLogin.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -20,11 +19,10 @@
             <Font name="Blackadder ITC" size="59.0" />
          </font>
       </Label>
-      <TextField fx:id="name" layoutX="103.0" layoutY="172.0" prefHeight="73.0" prefWidth="381.0">
+      <TextField fx:id="name" layoutX="103.0" layoutY="172.0" onAction="#registerClient" prefHeight="73.0" prefWidth="381.0" promptText="name">
          <font>
             <Font name="Blackadder ITC" size="59.0" />
          </font>
       </TextField>
-      <Button fx:id="button" layoutX="500.0" layoutY="285.0" mnemonicParsing="false" onMouseClicked="#registerClient" text="Button" />
    </children>
 </AnchorPane>
